<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Registrarse">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="105dp"
        android:layout_height="116dp"
        app:srcCompat="@drawable/occasio" />

    <TextView
        android:id="@+id/TvBienvenida"
        android:layout_width="282dp"
        android:layout_height="33dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/txt_register_title"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/msj_bienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/txt_register_description"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/tv_nombre"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="20dp"
        android:text="@string/txt_register_name"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:background="@drawable/redondeado"
        android:ems="10"
        android:hint="@string/et_register_hint_name"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/material_dynamic_neutral30" />

    <TextView
        android:id="@+id/tv_Apellido"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="10dp"
        android:text="@string/txt_register_last_name"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/et_apellido"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:background="@drawable/redondeado"
        android:ems="10"
        android:hint="@string/et_register_hint_lastname"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/material_dynamic_neutral30" />

    <TextView
        android:id="@+id/tv_fecha_nac"

        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="10dp"
        android:text="@string/txt_register_dateofbirthday"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/et_fecha_nac"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:background="@drawable/redondeado"
        android:ems="10"
        android:hint="@string/et_register_hint_birthday"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/material_dynamic_neutral30" />

    <TextView
        android:id="@+id/tv_usuario"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="10dp"
        android:text="@string/txt_register_email"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:background="@drawable/redondeado"
        android:ems="10"
        android:hint="@string/et_register_hint_email"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/material_dynamic_neutral30" />

    <TextView
        android:id="@+id/tv_password"

        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="10dp"
        android:text="Contraseña:"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:background="@drawable/redondeado"
        android:ems="10"
        android:hint="@string/et_register_hint_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/material_dynamic_neutral30" />



    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/botones"
        android:padding="10dp"
        android:text="@string/btn_register_signup"
        android:textColor="@color/white"
        app:iconPadding="40dp"
        android:onClick="registrarUsuario"/>

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="38dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_textoabajo"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/txt_register_haveaccount"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_ingresar"
            android:layout_width="15dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:onClick="AbrirIngresar"
            android:text="@string/txt_register_signin"
            android:textColor="@color/botones" />
    </LinearLayout>


</LinearLayout>