<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    android:orientation="vertical"
    tools:context=".CrearEvento">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D8D8D8"
        android:onClick="seleccionaImagen">

        <ImageView
            android:id="@+id/bannerEvento"
            android:layout_width="match_parent"
            android:layout_height="195dp"
            android:layout_gravity="center"
            android:contentDescription="@string/texto_ivbannerevento"
            android:padding="10dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/icono_imagen"
            />

        <TextView
            android:id="@+id/tvSubirPortada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:text="@string/textotvsubirportada"
            android:textSize="20sp"
            android:textStyle="bold" />
    </FrameLayout>

    <TextView
        android:id="@+id/tvDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/textotvdatosevento"
        android:textSize="20sp"
        android:textStyle="bold" />
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/divisor"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <EditText
        android:id="@+id/etNombreEvento"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/textoetnombreevento"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"/>

    <EditText
        android:id="@+id/etLugarEvento"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/textoetlugarevento"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"/>

    <EditText
        android:id="@+id/etDireccionEvento"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/textoetdireccionevento"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textotvfechaevento"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etFecha"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@color/white"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/textoetfechaevento"
                android:importantForAutofill="no"
                android:inputType="date" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textotvhoraevento"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etHora"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:background="@color/white"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/textoethoraevento"
                android:importantForAutofill="no"
                android:inputType="time" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textotvcategoriaevento"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spCategoria"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="5dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/textotvdescripcionevento"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:background="@color/white"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/textoetdescripcionevento"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"/>

    <Button
        android:id="@+id/btnContinuar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/btncontinuar" />
</LinearLayout>