<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    android:orientation="vertical"
    tools:context=".CrearEvento3">

    <TextView
        android:id="@+id/tvPagos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/textotvpagos"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textotvinfopagos"
        android:textSize="18sp"
        android:textStyle="normal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <Switch
        android:id="@+id/swEventoGratis"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:text="@string/textoeventogratuito"
        android:textSize="18sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <EditText
            android:id="@+id/etPrecioEntradaGeneral"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/borde"
            android:gravity="top"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:hint="@string/textodescrip"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/divisor"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tvAdvertencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textotvadvertencia"
        android:textSize="18sp"
        android:textStyle="normal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/btnCrear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/textobtncrearevento" />

</LinearLayout>