<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="sv.edu.catolica.g07_occasio.activity.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="sv.edu.catolica.g07_occasio.activity.ui.categorias.CategoriasFragment"
        android:label="@string/menu_categorias"
        tools:layout="@layout/fragment_categorias" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="sv.edu.catolica.g07_occasio.activity.ui.crear_evento.CrearEventoFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_crear_evento" />

    <fragment
        android:id="@+id/nav_mis_eventos"
        android:name="sv.edu.catolica.g07_occasio.activity.ui.mis_eventos.MisEventosFragment"
        android:label="Mis Eventos"
        tools:layout="@layout/fragment_mis_eventos" />

    <fragment
        android:id="@+id/nav_eventos_asistir"
        android:name="sv.edu.catolica.g07_occasio.activity.ui.eventos_asistir.EventosAsistirFragment"
        android:label="Eventos a los que asistiré"
        tools:layout="@layout/fragment_eventos_asistir" />

    <fragment
        android:id="@+id/nav_eventos_pasados"
        android:name="sv.edu.catolica.g07_occasio.activity.ui.eventos_pasados.EventosPasadosFragment"
        android:label="Eventos pasados"
        tools:layout="@layout/fragment_eventos_pasados" />

    <fragment
        android:id="@+id/nav_notificaciones"
        android:name="sv.edu.catolica.g07_occasio.activity.ui.notificaciones.NotificacionesFragment"
        android:label="Notificaciones"
        tools:layout="@layout/fragment_notificaciones" />

    <fragment
        android:id="@+id/detalleEventoFragment"
        android:name="sv.edu.catolica.g07_occasio.activity.ui.detalles.DetalleEvento"
        android:label="Detalle Evento Fragment"
        tools:layout="@layout/fragment_detalle_evento" />

</navigation>